--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="center">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body class="background">
+    <div class="center">
+        <h1 class="name">🕊️ Paul Walker 🕊️</h1>
+        <img class="paul-img" src="https://e0.pxfuel.com/wallpapers/785/420/desktop-wallpaper-paul-walker-tribute-paul-walker-car.jpg" alt="Paul Walker">
+        <p class="quote">“If one day speed kills me, don't cry because I was smiling.” - Paul Walker</p>
+    </div>
+
+
+    <div class="desc">
+        <ul>
+            <li">
+                <h1> About: </h1>
+                <p> Paul William Walker was an American actor. He was best known for his role as Brian O'Conner in the Fast & Furious franchise.
+                     Paul Walker began his career as a child actor in the 1980s, gaining recognition in the 1990s after appearing in the television soap opera,
+                     The Young and the Restless; he received praise for his performances in the teen comedy She's All That and the comedy-drama Varsity Blues (both 1999), 
+                     and saw international fame by starring in The Fast and the Furious (2001).</p>
+            </li>
+            <li">
+                <h1> Personal Life: </h1>
+                <p> Walker was born on September 12, 1973, in Glendale, California. His mother, Cheryl, was a fashion model, and his father, 
+                    Paul William Walker III, was a sewer contractor and former amateur boxer, who was a two-time Golden Gloves champion Walker's paternal grandfather, 
+                    William, had a short-lived boxing career as "Irish" Billy Walker, while another raced factory cars for Ford in the 1960s. </p>
+            </li>
+            <li">
+                <h1> Death: </h1>
+                <p> On November 30, 2013, at about 3:30 p.m. PST, Walker, 40, and Roger Rodas, 38, left an event for Walker's charity Reach Out Worldwide for 
+                    victims of Typhoon Haiyan, with Rodas driving his red 2005 Porsche Carrera GT. Traveling between 80 mph (130 km/h) and 93 mph (150 km/h) in a 
+                    45 mph (72 km/h) speed zone on Hercules Street in Valencia, a neighborhood of Santa Clarita, California, the car ended up crashed into a concrete lamp post 
+                    and two trees, catching fire. Rodas died of multiple trauma while Walker died from the combined effects of trauma and burns. 
+                    Both of their bodies were burned beyond recognition.</p>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
